# kafka-confluent-demo

./: .env  .gitignore  Makefile  docker-compose.yml  pyproject.toml
src/: consume-messages.py  produce-messages.py  register-schemas.py  shared.py
src/schema/: demo.record-changed.0-key.avsc  demo.record-changed.0-value.avsc
