[tool.poetry]
name = "confluent-kafka-demo"
version = "0.1.1"
description = "Demo of Confluent Kafka"
authors = ["Andrei Shkarin <andrei.shkarin@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
pydantic = "~1.10.0"
confluent-kafka = "~1.9.0"
fastavro = "~1.7.0"
requests = "~2.28.0"
avro = "~1.11.1"
python-dotenv = "~0.21.0"

[tool.poetry.dev-dependencies]
mypy = "~0.991"
black = "~22.10.0"
flake8 = "~5.0.0"
isort = "~5.10.1"

[build-system]
requires = ["poetry~=1.1"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
